--- a/index.html
+++ b/index.html
@@ -64,14 +64,13 @@
                 <a href="#">Yonglu Li</a><sup>2,4&dagger;</sup>
             </span>
           </div>
+          <span class="author-block" style="font-size:medium;"><sup>&dagger;</sup>Corresponding Author</span>
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>Zhejiang University,</span>
             <span class="author-block"><sup>2</sup>Shanghai Innovation Institute</span>
             <span class="author-block"><sup>3</sup>Westlake University</span>
             <br>
             <span class="author-block"><sup>4</sup>Shanghai Jiao Tong University</span>
-            <br>
-            <span class="author-block"><sup>&dagger;</sup>Corresponding Author</span>
           </div>
 
           <div class="column has-text-centered">
