整理文件，添加PDF和readme

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>L1Flow</title>
+  <title>L1 Sample Flow for Efficient Visuomotor Learning</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
@@ -76,7 +76,7 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
-                <a href=".pdf" class="external-link button is-normal is-rounded is-dark">
+                <a href="./static/pdfs/L1_Sample_Flow_Arxiv.pdf" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon"><i class="fas fa-file-pdf"></i></span>
                   <span>Paper</span>
                 </a>
@@ -103,7 +103,7 @@
 </section>
 
 <div class="image-container">
-    <img src="./static/outline.jpg" alt="Method Diagram" style="width: 30%;">
+    <img src="./static/images/outline.jpg" alt="Method Diagram" style="width: 30%;">
     <p class="figure-caption">1. Overview.</p>
 </div>
 
@@ -137,7 +137,7 @@
         <div class="column">
         <div class="content has-text-justified">
           <div class="image-container">
-                <img src="./static/toy.jpg" alt="Results" style="width: 300pt; display:inline-block;">
+                <img src="./static/images/toy.jpg" alt="Results" style="width: 300pt; display:inline-block;">
                 <p class="figure-caption">2. One-step integration effectively captures the multi-modality.</p>
           </div>
         </div>
@@ -145,7 +145,7 @@
         <div class="column">
             <div class="content has-text-justified">
               <div class="image-container">
-                    <img src="./static/algo.jpg" alt="Results" style="width: 220pt; display:inline-block;">
+                    <img src="./static/images/algo.jpg" alt="Results" style="width: 220pt; display:inline-block;">
                     <p class="figure-caption">3. Pseudocode</p>
               </div>
             </div>
@@ -187,11 +187,11 @@
         <h2 class="title is-3">Experimental Results</h2>
         <div class="content has-text-justified">
           <div class="image-container">
-             <img src="./static/exp1.jpg" alt="Results">
+             <img src="./static/images/exp1.jpg" alt="Results">
              <p class="figure-caption">4. Experiments in MimicGen.</p>
           </div>
           <div class="image-container">
-            <img src="./static/exp2.jpg" alt="Results">
+            <img src="./static/images/exp2.jpg" alt="Results">
             <p class="figure-caption">5. Experiments in RoboMimic.</p>
          </div>
         </div>
@@ -202,7 +202,7 @@
         <div class="column">
           <div class="content has-text-centered">
             <video id="teaser-left" autoplay muted controls playsinline style="width: 100%; height: 100%;">
-              <source src="./static/ddpm.mp4" type="video/mp4">
+              <source src="./static/videos/ddpm.mp4" type="video/mp4">
             </video>
             <h2 class="subtitle has-text-centered" style="font-size: 15pt;">DDPM (100 steps)</h2>
           </div>
@@ -210,7 +210,7 @@
         <div class="column">
           <div class="content has-text-centered">
             <video id="teaser-right" autoplay muted controls playsinline style="width: 100%; height: 100%;">
-              <source src="./static/ddim.mp4" type="video/mp4">
+              <source src="./static/videos/ddim.mp4" type="video/mp4">
             </video>
             <h2 class="subtitle has-text-centered" style="font-size: 15pt;">DDIM (16 steps)</h2>
           </div>
@@ -218,7 +218,7 @@
         <div class="column">
             <div class="content has-text-centered">
               <video id="teaser-right" autoplay muted controls playsinline style="width: 100%; height: 100%;">
-                <source src="./static/l1flow.mp4" type="video/mp4">
+                <source src="./static/videos/l1flow.mp4" type="video/mp4">
               </video>
               <h2 class="subtitle has-text-centered" style="font-size: 15pt;">L1 Flow (Ours)</h2>
             </div>
@@ -226,7 +226,7 @@
         <div class="column">
             <div class="content has-text-centered">
               <div class="image-container">
-                    <img src="./static/exp3.jpg" alt="Results" style="width: 400pt; display:inline-block;">
+                    <img src="./static/images/exp3.jpg" alt="Results" style="width: 400pt; display:inline-block;">
               </div>
               <h2 class="subtitle has-text-centered" style="font-size: 15pt;">Overall Results</h2>
             </div>
