--- a/index.html
+++ b/index.html
@@ -1,30 +1,79 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>L1 Sample Flow for Efficient Visuomotor Learning</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+  <!-- Preconnect for shared assets -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://ajax.googleapis.com">
+  <link rel="preconnect" href="https://documentcloud.adobe.com">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  <!-- Favicon
+  <link rel="icon" type="image/x-icon" href="./static/images/favicon.ico"> -->
+
+  <!-- Critical CSS -->
+  <link rel="stylesheet" href="./static/css/bulma.min.css">
+  <link rel="stylesheet" href="./static/css/index.css">
+
+  <!-- Non-critical CSS -->
+  <link rel="preload" href="./static/css/bulma-carousel.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="./static/css/bulma-slider.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="./static/css/fontawesome.all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+  <noscript>
+    <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
+    <link rel="stylesheet" href="./static/css/bulma-slider.min.css">
+    <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+  </noscript>
+
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+  <!-- Shared JS -->
+  <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script defer src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+  <script defer src="./static/js/fontawesome.all.min.js"></script>
+  <script defer src="./static/js/bulma-carousel.min.js"></script>
+  <script defer src="./static/js/bulma-slider.min.js"></script>
+  <script defer src="./static/js/index.js"></script>
 
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
   <style>
-    body { font-family: 'Noto Sans', sans-serif; }
-    .publication-title { font-family: 'Google Sans', sans-serif; }
-    .publication-authors { font-family: 'Google Sans', sans-serif; font-size: 1.2rem; color: #4a4a4a; margin-top: 20px}
-    .author-block { margin-right: 10px; }
     .publication-links { margin-top: 20px; }
+    .publication-authors {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 0.4rem 1rem;
+      line-height: 1.4;
+      margin-top: 16px;
+      text-align: center;
+    }
+    .publication-authors .author-block {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+    }
+    .publication-authors.affiliations {
+      display: block;
+      margin-top: 10px;
+      line-height: 1.5;
+    }
     .abstract-box { background-color: #f5f5f5; padding: 30px; border-radius: 10px; }
     .figure-caption { font-size: 0.9rem; color: #666; margin-top: 10px; }
     .teaser-video { width: 100%; border-radius: 10px; }
-    /* 图片居中样式 */
     .image-container { text-align: center; margin-bottom: 20px; }
     img { max-width: 100%; height: auto; border-radius: 5px; }
+    #bibtex-code {
+      white-space: pre-wrap;
+      word-break: break-word;
+      overflow-x: visible;
+    }
   </style>
 </head>
 <body>
@@ -65,7 +114,7 @@
             </span>
           </div>
           <span class="author-block" style="font-size:medium;"><sup>&dagger;</sup>Corresponding Author</span>
-          <div class="is-size-5 publication-authors">
+          <div class="is-size-5 publication-authors affiliations">
             <span class="author-block"><sup>1</sup>Zhejiang University,</span>
             <span class="author-block"><sup>2</sup>Shanghai Innovation Institute</span>
             <span class="author-block"><sup>3</sup>Westlake University</span>
@@ -76,23 +125,23 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
-                <a href="./static/pdfs/L1_Sample_Flow_Arxiv.pdf" class="external-link button is-normal is-rounded is-dark">
+                <a href="./static/pdfs/L1_Sample_Flow__Arxiv_Vers__.pdf" target="_blank" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon"><i class="fas fa-file-pdf"></i></span>
                   <span>Paper</span>
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs" class="external-link button is-normal is-rounded is-dark">
+                <a href="https://arxiv.org/abs/2410.21257" target="_blank" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon"><i class="ai ai-arxiv"></i></span>
                   <span>arXiv</span>
                 </a>
               </span>
-              <!-- <span class="link-block">
-                <a href="https://github.com" class="external-link button is-normal is-rounded is-dark">
+              <span class="link-block">
+                <a href="https://github.com/song-wx/L1Flow.github.io" target="_blank" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon"><i class="fab fa-github"></i></span>
                   <span>Code</span>
                 </a>
-              </span> -->
+              </span>
             </div>
           </div>
 
@@ -251,7 +300,26 @@
   </div>
 </section>
 
-
+<section class="section" id="bibtex">
+  <div class="container is-max-desktop content">
+    <div class="bibtex-header">
+      <h2 class="title is-3">BibTeX</h2>
+      <button class="copy-bibtex-btn" onclick="copyBibTeX()" title="Copy BibTeX to clipboard">
+        <i class="fas fa-copy"></i>
+        <span class="copy-text">Copy</span>
+      </button>
+    </div>
+    <pre id="bibtex-code"><code>@misc{song2025l1sampleflowefficient,
+  title={L1 Sample Flow for Efficient Visuomotor Learning}, 
+  author={Weixi Song and Zhetao Chen and Tao Xu and Xianchao Zeng and Xinyu Zhou and Lixin Yang and Donglin Wang and Cewu Lu and Yong-Lu Li},
+  year={2025},
+  eprint={2511.17898},
+  archivePrefix={arXiv},
+  primaryClass={cs.RO},
+  url={https://arxiv.org/abs/2511.17898}, 
+}</code></pre>
+  </div>
+</section>
 
 </body>
 </html>
