--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     }
     .abstract-box { background-color: #f5f5f5; padding: 30px; border-radius: 10px; }
     .figure-caption { font-size: 0.9rem; color: #666; margin-top: 10px; }
-    .teaser-video { width: 100%; border-radius: 10px; }
+    .teaser-video { width: 100%; border-radius: 16px; box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
+    .synced-video { max-height: 360px; }
     .image-container { text-align: center; margin-bottom: 20px; }
     img { max-width: 100%; height: auto; border-radius: 5px; }
     #bibtex-code {
@@ -152,8 +153,8 @@
 </section>
 
 <div class="image-container">
-    <img src="./static/images/outline.jpg" alt="Method Diagram" style="width: 30%;">
-    <p class="figure-caption">1. Overview.</p>
+  <img src="./static/images/outline.jpg" alt="Method Diagram" style="width: 40%;">
+  <p class="figure-caption">1. Overview.</p>
 </div>
 
 <section class="section">
@@ -182,24 +183,6 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Method</h2>
-        <div class="columns is-centered">
-        <div class="column">
-        <div class="content has-text-justified">
-          <div class="image-container">
-                <img src="./static/images/toy.jpg" alt="Results" style="width: 300pt; display:inline-block;">
-                <p class="figure-caption">2. One-step integration effectively captures the multi-modality.</p>
-          </div>
-        </div>
-        </div>
-        <div class="column">
-            <div class="content has-text-justified">
-              <div class="image-container">
-                    <img src="./static/images/algo.jpg" alt="Results" style="width: 220pt; display:inline-block;">
-                    <p class="figure-caption">3. Pseudocode</p>
-              </div>
-            </div>
-        </div>
-      </div>
       </div>
     </div>
     <p>
@@ -233,12 +216,38 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
+        <h2 class="title is-3">Pseudocode</h2>
+        <div class="columns is-centered">
+          <div class="column is-three-quarters">
+            <div class="content has-text-justified">
+              <div class="image-container">
+                <img src="./static/images/algo.jpg" alt="Method pseudocode" style="width: 100%; max-width: 600pt; display:inline-block;">
+                <p class="figure-caption">3. Pseudocode</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
         <h2 class="title is-3">Experimental Results</h2>
         <div class="content has-text-justified">
+          <p style="margin-bottom: 1.2rem;">
+            We first compare the proposed two-step sampling strategy with 2 standard denoising-based methods ie. DDPM (100 steps) and Flow Matching (10 steps), and L1 regression in 8 tasks of MimicGen Benchmark.
+          </p>
           <div class="image-container">
              <img src="./static/images/exp1.jpg" alt="Results">
              <p class="figure-caption">4. Experiments in MimicGen.</p>
           </div>
+          <p style="margin: 1.5rem 0;">
+            Then, as an efficient paradigm aiming at speeding up, L1 Flow is compared to distillation-based methods ie. Consistency Policy (CP) and OneDP in total 5 tasks of Robomimic and PushT Bench.
+          </p>
           <div class="image-container">
             <img src="./static/images/exp2.jpg" alt="Results">
             <p class="figure-caption">5. Experiments in RoboMimic.</p>
@@ -247,56 +256,49 @@
       </div>
     </div>
     <figure class="has-text-centered">
-    <div class="columns is-centered">
-        <div class="column">
+      <div class="columns is-centered is-variable is-6">
+        <div class="column is-one-third">
           <div class="content has-text-centered">
-            <video id="teaser-left" autoplay muted controls playsinline style="width: 100%; height: 100%;">
+            <video class="teaser-video synced-video" muted controls playsinline loop preload="metadata">
               <source src="./static/videos/ddpm.mp4" type="video/mp4">
             </video>
             <h2 class="subtitle has-text-centered" style="font-size: 15pt;">DDPM (100 steps)</h2>
           </div>
         </div>
-        <div class="column">
+        <div class="column is-one-third">
           <div class="content has-text-centered">
-            <video id="teaser-right" autoplay muted controls playsinline style="width: 100%; height: 100%;">
+            <video class="teaser-video synced-video" muted controls playsinline loop preload="metadata">
               <source src="./static/videos/ddim.mp4" type="video/mp4">
             </video>
             <h2 class="subtitle has-text-centered" style="font-size: 15pt;">DDIM (16 steps)</h2>
           </div>
         </div>
-        <div class="column">
-            <div class="content has-text-centered">
-              <video id="teaser-right" autoplay muted controls playsinline style="width: 100%; height: 100%;">
-                <source src="./static/videos/l1flow.mp4" type="video/mp4">
-              </video>
-              <h2 class="subtitle has-text-centered" style="font-size: 15pt;">L1 Flow (Ours)</h2>
-            </div>
+        <div class="column is-one-third">
+          <div class="content has-text-centered">
+            <video class="teaser-video synced-video" muted controls playsinline loop preload="metadata">
+              <source src="./static/videos/l1flow.mp4" type="video/mp4">
+            </video>
+            <h2 class="subtitle has-text-centered" style="font-size: 15pt;">L1 Flow (Ours)</h2>
+          </div>
         </div>
-        <div class="column">
-            <div class="content has-text-centered">
-              <div class="image-container">
-                    <img src="./static/images/exp3.jpg" alt="Results" style="width: 400pt; display:inline-block;">
-              </div>
-              <h2 class="subtitle has-text-centered" style="font-size: 15pt;">Overall Results</h2>
-            </div>
-        </div>
-    </div>
-    <figcaption style="margin-top: 10px; font-size: 11pt;">
+      </div>
+      <figcaption style="margin-top: 10px; font-size: 11pt;">
         6. Comparison of DDPM, DDIM, and L1Flow in real-world execution.
       </figcaption>
     </figure>
-    <br>
-    <p>
-        We first compare the proposed two-step sampling strategy with 2 standard denoising-based methods ie. DDPM (100 steps) and Flow Matching (10 steps), and L1 regression in 8 tasks of MimicGen Benchmark.
-    </p>
-    <br>
-    <p>
-        Then, as an efficient paradigm aiming at speeding up, L1 Flow is compared to distillation-based methods ie. Consistency Policy (CP) and OneDP in total 5 tasks of Robomimic and PushT Bench.
-    </p>
-    <p>
-        
-    </p>
+  </div>
+</section>
 
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h3 class="title is-4">Overall Results</h3>
+        <div class="image-container">
+          <img src="./static/images/exp3.jpg" alt="Overall quantitative comparison" style="width: 100%; max-width: 600pt;">
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
