--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2410.21257" target="_blank" class="external-link button is-normal is-rounded is-dark">
+                <a href="https://arxiv.org/abs/2511.17898" target="_blank" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon"><i class="ai ai-arxiv"></i></span>
                   <span>arXiv</span>
                 </a>
@@ -154,7 +154,7 @@
 
 <div class="image-container">
   <img src="./static/images/outline.jpg" alt="Method Diagram" style="width: 40%;">
-  <p class="figure-caption">1. Overview.</p>
+  <p class="figure-caption">Overview.</p>
 </div>
 
 <section class="section">
@@ -162,18 +162,18 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
-        <div class="content has-text-justified abstract-box">
-          <p>
-            Denoising-based models, such as diffusion and flow matching, have been a critical component of robotic manipulation for their strong distribution-fitting and scaling capacity. Concurrently, several works have demonstrated that simple learning objectives, such as L1 regression, can achieve performance comparable to denoising-based methods on certain tasks, while offering faster convergence and inference. In this paper, we focus on how to combine the advantages of these two paradigms: <strong>retaining the ability of denoising models to capture multi-modal distributions and avoid mode collapse while achieving the efficiency of the L1 regression objective.</strong> 
-          </p>
-          <p>
-            To achieve this vision, we reformulate the original v-prediction flow matching and transform it into sample-prediction with the L1 training objective. We empirically show that the multi-modality can be expressed via a single ODE step. Thus, we propose <strong>L1 Flow</strong>, a two-step sampling schedule that generates a suboptimal action sequence via a single integration step and then reconstructs the precise action sequence through a single prediction. The proposed method largely retains the advantages of flow matching while reducing the iterative neural function evaluations to merely two and mitigating the potential performance degradation associated with direct sample regression. 
-          </p>
-          <p>
-            We evaluate our method with varying baselines and benchmarks, including 8 tasks in MimicGen, 5 tasks in RoboMimic   & PushT Bench, and one task in the real-world scenario. The results show the advantages of the proposed method with regard to training efficiency, inference speed, and overall performance.
-          </p>
-        </div>
       </div>
+    </div>
+    <div class="content has-text-justified abstract-box">
+      <p>
+        Denoising-based models, such as diffusion and flow matching, have been a critical component of robotic manipulation for their strong distribution-fitting and scaling capacity. Concurrently, several works have demonstrated that simple learning objectives, such as L1 regression, can achieve performance comparable to denoising-based methods on certain tasks, while offering faster convergence and inference. In this paper, we focus on how to combine the advantages of these two paradigms: <strong>retaining the ability of denoising models to capture multi-modal distributions and avoid mode collapse while achieving the efficiency of the L1 regression objective.</strong> 
+      </p>
+      <p>
+        To achieve this vision, we reformulate the original v-prediction flow matching and transform it into sample-prediction with the L1 training objective. We empirically show that the multi-modality can be expressed via a single ODE step. Thus, we propose <strong>L1 Flow</strong>, a two-step sampling schedule that generates a suboptimal action sequence via a single integration step and then reconstructs the precise action sequence through a single prediction. The proposed method largely retains the advantages of flow matching while reducing the iterative neural function evaluations to merely two and mitigating the potential performance degradation associated with direct sample regression. 
+      </p>
+      <p>
+        We evaluate our method with varying baselines and benchmarks, including 8 tasks in MimicGen, 5 tasks in RoboMimic   & PushT Bench, and one task in the real-world scenario. The results show the advantages of the proposed method with regard to training efficiency, inference speed, and overall performance.
+      </p>
     </div>
   </div>
 </section>
@@ -187,27 +187,30 @@
     </div>
     <p>
         We consider a variant of Flow Matching where the model directly predicts the terminal sample rather than the instantaneous velocity. Instead of learning the instantaneous velocity field \(x_1-x_0\), the model \(\textcolor{red}{f_\theta(x_t,t)}\) predicts the corresponding terminal sample \(x_1\) conditioned on the intermediate state \(x_t\) and time \(t\):
-        \begin{equation}
-            \textcolor{red}{f_\theta(x_t,t)}=\frac{dx_t}{dt}=x_1-x_0\Rightarrow x_1.
-        \end{equation}
+        \begin{aligned}
+          \text{Origin:} &\quad \textcolor{red}{f_\theta(x_t, t)} = \frac{dx_t}{dt} = x_1 - x_0 \\
+          \text{Now:}    &\quad \textcolor{red}{f_\theta(x_t, t)} = x_1
+        \end{aligned}
         The instantaneous velocity can then be implicitly recovered as: 
         \begin{equation}
         \begin{aligned}
-            v=x_1-x_0&=\frac{\textcolor{red}{f_\theta(x_t,t)}-x_t}{1-t}.  
+            v=\frac{dx}{dt}=x_1-x_0&=\frac{\textcolor{red}{f_\theta(x_t,t)}-x_t}{1-t}.  
         \end{aligned}
-        \end{equation}
-        This yields a sample-prediction flow whose dynamics are defined by the ODE:
-        \begin{equation}
-            \frac{dx}{dt}=\frac{\textcolor{red}{f_\theta(x_t,t)}-x_t}{1-t}.
         \end{equation}
         At training time, the model is optimized to minimize the discrepancy between the predicted terminal sample \(x_{pred}\) and the true target sample \(x_1\). We employ L1 loss to supervise the target samples:
         \begin{equation}
         \mathcal{L}=\mathbb{E}_{x_0\sim\mathcal{N}(0,1),x_1\sim data,t}\ ||\textcolor{red}{f_\theta(x_t,t)}-x_1||_1.
         \label{eq:x_loss_L1}
         \end{equation}
-      </p>
-      <p>
-        During inference, we introduce a two-step denoising schedule that combines continuous flow integration with direct sample prediction. See details in the pseudocode.
+        During inference, we introduce a two-step denoising schedule that combines continuous flow integration with direct sample prediction. We first integrate the learned flow field from \( t=0 \) to an intermediate time \( t=0.5 \):
+        \begin{equation}
+            x_{0.5}=x_0+\frac{\textcolor{red}{f_\theta(x_0,0)}-x_0}{2}.
+        \end{equation}
+        Then at the midpoint, we directly invoke the model's sample prediction capability to obtain the final output:
+        \begin{equation}
+            x_{1} = \textcolor{red}{f_\theta(x_{0.5}, 0.5)}.
+        \end{equation}
+        See details in the pseudocode.
       </p>
   </div>
 </section>
@@ -217,14 +220,13 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Pseudocode</h2>
-        <div class="columns is-centered">
-          <div class="column is-three-quarters">
-            <div class="content has-text-justified">
-              <div class="image-container">
-                <img src="./static/images/algo.jpg" alt="Method pseudocode" style="width: 100%; max-width: 600pt; display:inline-block;">
-                <p class="figure-caption">3. Pseudocode</p>
-              </div>
-            </div>
+      </div>
+    </div>
+    <div class="columns is-centered">
+      <div class="column is-three-quarters">
+        <div class="content has-text-justified">
+          <div class="image-container">
+            <img src="./static/images/algo.jpg" alt="Method pseudocode" style="width: 100%; max-width: 600pt; display:inline-block;">
           </div>
         </div>
       </div>
@@ -237,70 +239,41 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Experimental Results</h2>
-        <div class="content has-text-justified">
-          <p style="margin-bottom: 1.2rem;">
-            We first compare the proposed two-step sampling strategy with 2 standard denoising-based methods ie. DDPM (100 steps) and Flow Matching (10 steps), and L1 regression in 8 tasks of MimicGen Benchmark.
-          </p>
-          <div class="image-container">
-             <img src="./static/images/exp1.jpg" alt="Results">
-             <p class="figure-caption">4. Experiments in MimicGen.</p>
-          </div>
-          <p style="margin: 1.5rem 0;">
-            Then, as an efficient paradigm aiming at speeding up, L1 Flow is compared to distillation-based methods ie. Consistency Policy (CP) and OneDP in total 5 tasks of Robomimic and PushT Bench.
-          </p>
-          <div class="image-container">
-            <img src="./static/images/exp2.jpg" alt="Results">
-            <p class="figure-caption">5. Experiments in RoboMimic.</p>
-         </div>
-        </div>
+      </div>
+    </div>
+    <div class="has-text-justified">
+      <p style="margin-bottom: 1.2rem;">
+        We first compare the proposed two-step sampling strategy with 2 standard denoising-based methods ie. DDPM (100 steps) and Flow Matching (10 steps), and L1 regression in 8 tasks of MimicGen Benchmark.
+      </p>
+      <div class="image-container">
+         <img src="./static/images/exp1.jpg" alt="Results">
+      </div>
+      <p style="margin: 1.5rem 0;">
+        Then, as an efficient paradigm aiming at speeding up, L1 Flow is compared to distillation-based methods ie. Consistency Policy (CP) and OneDP in total 5 tasks of Robomimic and PushT Bench.
+      </p>
+      <div class="image-container">
+        <img src="./static/images/exp2.jpg" alt="Results">
       </div>
     </div>
     <figure class="has-text-centered">
-      <div class="columns is-centered is-variable is-6">
-        <div class="column is-one-third">
+      <div class="columns is-centered">
+        <div class="column is-full">
           <div class="content has-text-centered">
-            <video class="teaser-video synced-video" muted controls playsinline loop preload="metadata">
-              <source src="./static/videos/ddpm.mp4" type="video/mp4">
+            <video class="teaser-video" muted controls playsinline loop preload="metadata">
+              <source src="./static/videos/ALL.mp4" type="video/mp4">
             </video>
-            <h2 class="subtitle has-text-centered" style="font-size: 15pt;">DDPM (100 steps)</h2>
-          </div>
-        </div>
-        <div class="column is-one-third">
-          <div class="content has-text-centered">
-            <video class="teaser-video synced-video" muted controls playsinline loop preload="metadata">
-              <source src="./static/videos/ddim.mp4" type="video/mp4">
-            </video>
-            <h2 class="subtitle has-text-centered" style="font-size: 15pt;">DDIM (16 steps)</h2>
-          </div>
-        </div>
-        <div class="column is-one-third">
-          <div class="content has-text-centered">
-            <video class="teaser-video synced-video" muted controls playsinline loop preload="metadata">
-              <source src="./static/videos/l1flow.mp4" type="video/mp4">
-            </video>
-            <h2 class="subtitle has-text-centered" style="font-size: 15pt;">L1 Flow (Ours)</h2>
+            <h2 class="subtitle has-text-centered" style="font-size: 15pt;">Real-world Experiments </h2>
           </div>
         </div>
       </div>
-      <figcaption style="margin-top: 10px; font-size: 11pt;">
-        6. Comparison of DDPM, DDIM, and L1Flow in real-world execution.
-      </figcaption>
     </figure>
   </div>
 </section>
 
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h3 class="title is-4">Overall Results</h3>
-        <div class="image-container">
-          <img src="./static/images/exp3.jpg" alt="Overall quantitative comparison" style="width: 100%; max-width: 600pt;">
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<div class="image-container">
+  <img src="./static/images/exp3.jpg" alt="Overall quantitative comparison" style="width: 100%; max-width: 600pt;">
+  <p class="figure-caption">Comparison on Real-world Experiments.</p>
+</div>
 
 <section class="section" id="bibtex">
   <div class="container is-max-desktop content">
