--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 </section>
 
 <div class="image-container">
-  <img src="./static/images/outline.jpg" alt="Method Diagram" style="width: 40%;">
+  <img src="./static/images/outline.jpg" alt="Method Diagram" style="width: 30%;">
   <p class="figure-caption">Overview.</p>
 </div>
 
@@ -226,7 +226,7 @@
       <div class="column is-three-quarters">
         <div class="content has-text-justified">
           <div class="image-container">
-            <img src="./static/images/algo.jpg" alt="Method pseudocode" style="width: 100%; max-width: 600pt; display:inline-block;">
+            <img src="./static/images/algo.jpg" alt="Method pseudocode" style="width: 60%; max-width: 600pt; display:inline-block;">
           </div>
         </div>
       </div>
@@ -255,6 +255,9 @@
         <img src="./static/images/exp2.jpg" alt="Results">
       </div>
     </div>
+    <p style="margin: 1.5rem 0;">
+      We conduct one task to demonstrate the effectiveness of L1 Flow in the real-world.
+    </p>
     <figure class="has-text-centered">
       <div class="columns is-centered">
         <div class="column is-full">
@@ -271,7 +274,7 @@
 </section>
 
 <div class="image-container">
-  <img src="./static/images/exp3.jpg" alt="Overall quantitative comparison" style="width: 100%; max-width: 600pt;">
+  <img src="./static/images/exp3.jpg" alt="Overall quantitative comparison" style="width: 60%; max-width: 400pt;">
   <p class="figure-caption">Comparison on Real-world Experiments.</p>
 </div>
 
