--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://github.com/song-wx/L1Flow.github.io" target="_blank" class="external-link button is-normal is-rounded is-dark">
+                <a href="https://github.com" target="_blank" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon"><i class="fab fa-github"></i></span>
-                  <span>Code</span>
+                  <span>Code(Coming Soon)</span>
                 </a>
               </span>
             </div>
