--- a/index.html
+++ b/index.html
@@ -88,30 +88,30 @@
           <h1 class="title is-1 publication-title">L1 Sample Flow for Efficient Visuomotor Learning
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="www.scholar.com">Weixi Song</a><sup>1,2,3</sup>,</span>
+              <a href="https://scholar.google.com/citations?user=fvP8SGcAAAAJ&hl=en">Weixi Song</a><sup>1,2,3</sup>,</span>
             <span class="author-block">
-              <a href="#">Zhetao Chen</a><sup>1,2</sup>,</span>
+              <a href="https://openreview.net/profile?id=~ZheTao_Chen2">Zhetao Chen</a><sup>1,2</sup>,</span>
             <span class="author-block">
-              <a href="#">Tao Xu</a><sup>2</sup>
+              <a href="https://openreview.net/profile?id=~Tao_Xu19">Tao Xu</a><sup>2</sup>
             </span>
             <span class="author-block">
-                <a href="#">Xianchao Zeng</a><sup>2</sup>
+                <a href="https://openreview.net/profile?id=~Xianchao_Zeng1">Xianchao Zeng</a><sup>2</sup>
             </span>
             <span class="author-block">
-                <a href="#">Xinyu Zhou</a><sup>2</sup>
+                <a href="https://openreview.net/profile?id=~Xinyu_Zhou13">Xinyu Zhou</a><sup>2</sup>
             </span>
             <span class="author-block">
-                <a href="#">Lixin Yang</a><sup>2,4</sup>
+                <a href="https://scholar.google.com/citations?user=Bm8p4JsAAAAJ&hl=en">Lixin Yang</a><sup>2,4</sup>
             </span>
             <br>
             <span class="author-block">
-                <a href="#">Donglin Wang</a><sup>3&dagger;</sup>
+                <a href="https://scholar.google.com/citations?user=-fo6wdwAAAAJ&hl=en">Donglin Wang</a><sup>3&dagger;</sup>
             </span>
             <span class="author-block">
-                <a href="#">Cewu Lu</a><sup>2,4</sup>
+                <a href="https://scholar.google.com/citations?user=QZVQEWAAAAAJ&hl=en">Cewu Lu</a><sup>2,4</sup>
             </span>
             <span class="author-block">
-                <a href="#">Yonglu Li</a><sup>2,4&dagger;</sup>
+                <a href="https://scholar.google.com/citations?user=UExAaVgAAAAJ&hl=zh-CN">Yonglu Li</a><sup>2,4&dagger;</sup>
             </span>
           </div>
           <span class="author-block" style="font-size:medium;"><sup>&dagger;</sup>Corresponding Author</span>
@@ -287,15 +287,14 @@
         <span class="copy-text">Copy</span>
       </button>
     </div>
-    <pre id="bibtex-code"><code>@misc{song2025l1sampleflowefficient,
-  title={L1 Sample Flow for Efficient Visuomotor Learning}, 
-  author={Weixi Song and Zhetao Chen and Tao Xu and Xianchao Zeng and Xinyu Zhou and Lixin Yang and Donglin Wang and Cewu Lu and Yong-Lu Li},
-  year={2025},
-  eprint={2511.17898},
-  archivePrefix={arXiv},
-  primaryClass={cs.RO},
-  url={https://arxiv.org/abs/2511.17898}, 
-}</code></pre>
+    <pre id="bibtex-code"><code>
+      @article{song2025l1,
+        title={L1 Sample Flow for Efficient Visuomotor Learning},
+        author={Song, Weixi and Chen, Zhetao and Xu, Tao and Zeng, Xianchao and Zhou, Xinyu and Yang, Lixin and Wang, Donglin and Lu, Cewu and Li, Yong-Lu},
+        journal={arXiv preprint arXiv:2511.17898},
+        year={2025}
+      }
+    </code></pre>
   </div>
 </section>
 
